# tom-drake-resume

./: .env.example  .gitignore  AI_WORKFLOW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  resume-schema.json  resume.yml
.github/workflows/: ci.yml
schemas/: resume-schema.json
src/resume/: __init__.py  cli.py  config.py  models.py
src/resume/builders/: IMPLEMENTATION_PLAN.md  PHASE_2_PLAN.md  __init__.py  base.py  html.py  json_builder.py  markdown.py  pdf.py
src/resume/validators/: __init__.py  schema.py
templates/html/assets/css/: modern.css
templates/markdown/: github.md
tests/: __init__.py  conftest.py  test_cli_simple.py  test_config.py  test_models.py  test_validators.py
tests/test_builders/: __init__.py  test_base.py  test_factory.py  test_html_simple.py  test_markdown_simple.py  test_pdf_simple.py
